--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "photo-contest",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/josegomez-dev.github.io/photo-contest",
+  "homepage": "https://josegomez-dev.github.io/photo-contest/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
