--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "photo-contest",
+  "name": "gallery",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/josegomez-dev.github.io/photo-contest",
+  "homepage": "https://github.com/josegomez-dev.github.io/gallery",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
